--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chalk": "^3.0.0",
     "esm": "^3.2.25",
     "execa": "^4.0.0",
+    "figlet": "^1.3.0",
     "inquirer": "^7.0.6",
     "listr": "^0.14.3",
     "ncp": "^2.0.0",
